lab1/Test/L1-A-2-48.output
Error Type B at Line 12
Error Type B at Line 27
Error Type B at Line 40
