lab1/Test/L1-A-2-48.cmm
struct {
  int YO_fz3rJ2i8nN09A [ 32108321 ] , rma2AxH3WY8wCWE9QDR 
    [ 664628880 ] ;
  int _49SyE , RK = P7IRSJG1vk2DB6RpzQE ( MK4i3l ) 
    * foUb_mZRairgp0Dbpc * cjLzXBMOyhWjBIytry / JVtXr2V9uITN77OD_10 
    / ApbG4oAEYp08vP_n1 / mHM8VC_ * TTgSp4LK1zmgZ13okvt 
    + S0vq21 && wCSYAsE , ZG [ 1611564224 ] [ 1536522358 
    ] , aK7NQTx8sgA9 ;
  int pUTStU [ 242796078 ] [ 1247314171 ] [ 1440195211 
    ] [ 944294484 ] = - 1655416169 [ D0lElWW ] . qYzQF_H92 
    [ f_ahi ] [ x03 ] * MZRB1Hfebrrm ( P4tWhY ) * - gdNqd0PpHopldfA9U7J_ 
    * E1HBCK77 ( / - ZA4LslapAmRK9R12p5 - ! _at2Lg0sOzHsDAN 
    / kd6pb2tC9r * lM / tL_aTKLpP * mL * xSIpJc5eQ96eBi7 
    / _I > - t70doFe / qLeL2ESGQe4BD * HrPbECggQA - QVojDuAhPlzzYzuH3 
    + kNCpkyn_fPq <= ! KvYsWMc5 <= - hpQdA + b_iHQI5 + 
    Tsjy8sIOBZVm ;
  int C_QQI2z [ 984142602 ] [ 1750850052 ] [ 1755325889 
    ] = - - RmNVU2Phrh + s5S + vIq6yzDUsLuM9elGNf - yLwzXKII3kErsO51nobE 
    + EjPKMtmrI03YAM2lI - nYuM - C6HVMnCr == cgDlfLnszDQPRpRNp 
    ;
  struct l0mo GsgmMvOK8hep0ryroM [ 142593786 ] = - 
    yFsUpjD9pYSB1o0ug * mxVlgHCD4XHxT4N8xkwq * LfJPpV3 
    * fwzvgD8AqsEIx3 / o4pmorGenQah <= JNv_werh > xgZlPN 
    == PTUEWxEmibPRAueu08 ;
};
struct gAWHDLz D ( int bZH3J6KchVwN7OKQQ , int SIvxh 
  [ 1812939943 ] , int lPSXASElnvGms9 float N9EGWc7BPXD65BMn 
  ) {
  if ( b ( - zCQPZcsjaQstimBs ( ) [ seiJHD4aGmLIhj 
    ] != i2gzxQu == KuKc7L9 > uGK7OV_vgX3Qm9zCv >= D9X29 
    <= Zsy6cU8i > _ && s3ch3bB0Ev2Jhn2U && f1rEJj2snVwb 
    || tbw9C3ehZv ) * ! - U__UqjBS2AVg4 * ! w05C3Snq69BK 
    ( GqwoM6HDDwREW9dnEv ) / v ( ) . CHbGn8 [ LJ1obAvM 
    ] * ! PmSdHoT8JLYwFfZysfT ( ) . VY5sC5prv3u3jG8JxFL 
    != - U1BRdJqleA3JeVgFhj ( ) || - ! WiGmUGO3IDxcGoBR 
    / R3zl6ALnPYknbDm / fje0 / qdT16yL * qzwBqy4gebCtrm7Iov 
    * yopVRtdzEo8erL5RWRN / P8j5FHZx1cE2 - cetTknLNcN 
    + kxqibPQFK != y63si62C1cryK6I7h >= ekAnaCYw7vqRBIE5 
    > j8F9C6zmdNu7l0 < U2H0eNyGJ3Vg <= dJyfBRREGCCVioj4LHN 
    && LxyS_weGQoogI || - ! ncZN212tMfZY8r * * ql5C / 
    VVKV_frD / U4TpY2Y2aDpv_ei * aNT7fz + HmJfiRzvzZ_uHuNd 
    + E <= KBDT < X5SFvHdGH >= FNA5mVCck8kwn != unscA0JlaleSp6 
    == w2Ug21gGheGKvG_CJimr == MJI == UicNr7cFrasjcsUVD5bP 
    > emtmvVLuZLOgh > maX2cc && mLKPj && SdqWRkKLbjEzaecuuI 
    || - - gPdxPoWIyXh / QJc1EmERmN4_63K3x3 + x_1cl ) 
      while ( DOt9X7 )   u2aMQ205mPpc ;

else   if ( j )   if ( dZjQGJZYj4N5 )   y0G8 ;



}
